# mathematical_biology

./: .gitignore  Cargo.toml  README.md  liapunov.plt  sir.plt  test.plt  turtle.py
examples/: bifurcation.rs  leslie.rs  liapunov.rs  sir.rs  turtle.rs
src/: leslie.rs  lib.rs  sir.rs
src/de/: mod.rs  sir.rs
src/infection/: mod.rs  sir.rs
