[package]
name = "mathematical_biology"
version = "0.1.0"
authors = ["doraneko94 <shuntaro94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
intel-mkl = ["ndarray-linalg/intel-mkl", "eom/intel-mkl"]

[dependencies]
gnuplot = "0.0.32"
ndarray = "0.13.0"
ndarray-linalg = { git = "https://github.com/rust-ndarray/ndarray-linalg", branch = "master" }
num-complex = "0.2.4"
eom = { git = "https://github.com/termoshtt/eom" }
numerical = { git = "https://github.com/doraneko94/numerical" }